// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrayToObject 1`] = `
Object {
  "2": Object {
    "name": "def",
  },
  "5": Object {
    "value": "abc",
  },
}
`;

exports[`arrayToObject: keep keys 1`] = `
Object {
  "2": Object {
    "id": 2,
    "name": "def",
  },
  "5": Object {
    "id": 5,
    "value": "abc",
  },
}
`;

exports[`moveKey 1`] = `
Object {
  "b": Object {
    "name": Object {
      "id": 5,
    },
  },
}
`;

exports[`objectToArray 1`] = `
Array [
  Object {
    "id": 5,
    "identifier": "a",
  },
  Object {
    "identifier": "b",
    "name": "def",
  },
]
`;

exports[`sort JSON array 1`] = `
Array [
  6,
  1,
  3,
]
`;

exports[`sort JSON object 1`] = `
Object {
  "k": Array [
    6,
    1,
    3,
  ],
  "y": Object {
    "a": "abc",
    "c": 5,
    "inception": 1880-02-01T23:17:00.000Z,
  },
  "z": 2,
}
`;
